[project]
name = "project1_Gusar_dpo-nod"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman G",email = "gusar.roman.a@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[dependency-groups]
dev = [
    "ruff (>=0.13.2,<0.14.0)"
]

[tool.poetry]
 packages = [
     { include = "labyrinth_game" },
 ]

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
